# Calc-method

./: .gitignore  README.md
Lab1/: CMakeLists.txt  README.txt  auto.sh  input.txt  output.txt
Lab1/include/: Series.hpp
Lab1/jv/include/: SeriesInterface.java
Lab1/jv/src/: Main.java  Series.java
Lab1/src/: Series.cpp  main.cpp
Lab2/: check.py  main.cpp  tmp.md
Lab3/: main.cpp
Lab4/: input.txt  main.cpp
Lab5/: README.txt  rp.md
Lab5/Solver/: AutoCompile.bat  CMakeLists.txt  Main.cc
Lab5/Solver/include/: NewtonSolver.hh  SecantSolver.hh  Solver.hh
Lab5/Solver/src/: NewtonSolver.cc  SecantSolver.cc  Solver.cc
Lab6/: main.cpp
Lab7/: Main.cc
Lab7/Solver/: CMakeLists.txt  Main.cc
Lab7/Solver/config/: Config.hh
Lab7/Solver/include/: GaussSeidelSolver.hh  SORSolver.hh  Solver.hh
Lab7/Solver/src/: GaussSeidelSolver.cc  SORSolver.cc  Solver.cc
